[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/records.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/GameLogo.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/backgroud_loading.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/font40.fnt" type="BitmapFont" id=4]
[ext_resource path="res://assets/fonts/font70.fnt" type="BitmapFont" id=5]
[ext_resource path="res://assets/sprites/red.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/red_press.png" type="Texture" id=7]

[node name="records" type="Node"]

script/script = ExtResource( 1 )

[node name="logo" type="Sprite" parent="."]

transform/pos = Vector2( 365.195, 174.664 )
texture = ExtResource( 2 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 360, 640 )
z/z = -1
texture = ExtResource( 3 )

[node name="infos" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 71.0
margin/top = 407.0
margin/right = 656.0
margin/bottom = 1011.0

[node name="lblUltimaPontuacao" type="Label" parent="infos"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -3.0
margin/top = 52.0
margin/right = 582.0
margin/bottom = 129.0
custom_fonts/font = ExtResource( 4 )
text = "Ultima Pontuação"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lblUltimaPontuacaoValor" type="Label" parent="infos"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -3.0
margin/top = 110.0
margin/right = 582.0
margin/bottom = 309.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lblMelhorPontuacao" type="Label" parent="infos"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 329.0
margin/right = 579.0
margin/bottom = 406.0
custom_fonts/font = ExtResource( 4 )
text = "Melhor Pontuação"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lblMelhorPontuacaoValor1" type="Label" parent="infos"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -3.0
margin/top = 387.0
margin/right = 582.0
margin/bottom = 586.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 75.0
margin/top = 1037.0
margin/right = 653.0
margin/bottom = 1243.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="lblUltimaPontuacao1" type="Label" parent="TextureButton"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -2.0
margin/top = 68.0
margin/right = 583.0
margin/bottom = 145.0
custom_fonts/font = ExtResource( 4 )
text = "Voltar"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]


